--- a/src/main/webapp/css/cards.css
+++ b/src/main/webapp/css/cards.css
@@ -4,11 +4,13 @@
     padding: 1rem;
     margin: 2rem;
     color: #fff;
+    width: 30rem;
+
 }
 
 
-.btn {
-    border: #857e7e solid 5px;
+button {
+    border: #857e7e solid 2px;
     background-color: black;
     color: white;
     font-weight: bold;
