--- a/src/main/webapp/css/cards.css
+++ b/src/main/webapp/css/cards.css
@@ -1,3 +1,9 @@
+.cards {
+    display: inline-block;
+    margin: 3rem;
+    justify-content: space-around;
+}
+
 .card {
     border: solid 5px grey;
     background-color: #470012;
@@ -5,7 +11,6 @@
     margin: 2rem;
     color: #fff;
     width: 30rem;
-
 }
 
 
