--- a/src/main/webapp/css/cards.css
+++ b/src/main/webapp/css/cards.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 20px;
+    gap: 15px;
+    flex-grow: unset;
 }
 
 .card {
@@ -12,8 +13,8 @@
     flex-flow: wrap;
     justify-content: space-evenly;
     flex: 1 0 calc(25% - 15px);
-    height: 45rem;
-    max-width: 35rem;
+    aspect-ratio: 1/1;
+    text-align: center;
 }
 
 
