--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -81,7 +81,7 @@ section::before
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#7a002b,#470012,#470012,#7a002b);
+    background: linear-gradient(#7a002b,#470012, #2a020b,#7a002b);
     animation: animate 5s linear infinite;
 }
 @keyframes animate
