--- a/src/main/webapp/css/button.css
+++ b/src/main/webapp/css/button.css
@@ -1,4 +1,4 @@
-button {
+button, .button {
     padding: 10px 25px;
     border-radius: 50px;
     border: 0;
@@ -11,14 +11,14 @@ button {
     color: #ffffff;
 }
 
-button:hover {
+button:hover , .button:hover{
     letter-spacing: 3px;
     background-color: hsl(339, 100%, 24%);
     color: hsl(0, 0%, 100%);
     box-shadow: rgb(122, 0, 43) 0px 7px 29px 0px;
 }
 
-button:active {
+button:active, .button:active {
     letter-spacing: 3px;
     background-color: hsl(339, 100%, 24%);
     color: hsl(0, 0%, 100%);
