updated form changes

--- a/src/main/webapp/css/button.css
+++ b/src/main/webapp/css/button.css
@@ -26,3 +26,9 @@ button:active {
     transform: translateY(10px);
     transition: 100ms;
 }
+
+input {
+    background: none;
+    border: none;
+    width: inherit;
+}
