added styling to create ad

--- a/src/main/webapp/css/navabar.css
+++ b/src/main/webapp/css/navabar.css
@@ -26,3 +26,12 @@
 aside{
     margin-bottom: 2em;
 }
+
+h1{
+    font-family: 'Pirata One', cursive;
+}
+
+.btn{
+    background-color: #7a002b;
+    color:#eeebe2 ;
+}
