--- a/src/main/webapp/css/update-form.css
+++ b/src/main/webapp/css/update-form.css
@@ -16,12 +16,14 @@
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     justify-items: flex-start;
+
 }
 
 input {
     background: none;
     border: none;
     width: inherit;
+    padding: inherit;
 
 }
 
