--- a/src/main/webapp/css/update-form.css
+++ b/src/main/webapp/css/update-form.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: min-content;
     padding: 20px;
+    margin: 15px;
     font-size: 20px;
     line-height: 1.42857143;
     color: #fff;
