--- a/src/main/webapp/css/logout.css
+++ b/src/main/webapp/css/logout.css
@@ -7,7 +7,8 @@
 
 h1 {
     margin-bottom: 8rem;
-    margin-left: 22rem;
+    /*margin-left: 22rem;*/
+    text-align: center;
 }
 img{
     height: 60rem;
